<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/currentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/main_color"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/mevcud_konum"
            android:textColor="@color/main_color"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/locationIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/locaticon" />

            <TextView
                android:id="@+id/localeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/locationIcon"
                android:hint="Baki,Azerbaijan"
                android:textColor="@color/main_color"
                android:textColorHint="@color/gray"
                android:textSize="15sp" />

        </RelativeLayout>


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="2dp"
            android:src="@drawable/ic_notifications"
            app:tint="@color/main_color" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilSearch"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="56dp"
                        android:layout_margin="16dp"
                        android:layout_weight="1"
                        android:elevation="8dp"
                        android:gravity="center|start"
                        android:hint="@string/search_for_rent"
                        app:boxBackgroundColor="@color/main_color"
                        app:startIconDrawable="@drawable/ic_baseline_search_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center|start" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="15dp"
                        android:elevation="8dp"
                        android:src="@drawable/filter" />

                </LinearLayout>


            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="10dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/alata"
                        android:text="@string/kateqoriyalar"
                        android:textColor="@color/main_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categories_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/alata"
                        android:text="@string/n_y_ks_k_reytinq"
                        android:textColor="@color/main_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/feature_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="0dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/alata"
                        android:text="Sənə daha yaxın"
                        android:textColor="@color/main_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/nearest_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="0dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:padding="20dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Most Viewed"
                        android:textSize="20sp" />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/nearest_you"
                    android:layout_width="match_parent"
                    android:layout_height="100dp" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>