<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#800000">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Genclik">

            <ImageView
                android:id="@+id/feature_recyle_item_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ev3"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:id="@+id/toolbar"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:background="@drawable/lay_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="#E1E1E1"
                    android:text="Menzil"
                    android:textColor="@color/main_color" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:layout_centerInParent="true"
                    android:progressBackgroundTint="@color/gray"
                    android:progressTint="@color/yellow"
                    android:rating="2.7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@id/ratingBar"
                    android:text="Rating"
                    android:textColor="@color/main_color"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/feature_recyle_item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/alata"
                    android:text="Genclik"
                    android:textColor="@color/main_color"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/feature_recyle_item_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/alata"
                    android:text="350₼/Ayliq"
                    android:textColor="@color/main_color"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp">

                <ImageView
                    android:id="@+id/locationMv"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/locaticon" />

                <TextView
                    android:id="@+id/feature_recyle_item_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@id/locationMv"
                    android:text="Baki,Azerbaijan"
                    android:layout_centerVertical="true"
                    android:textColor="@color/main_color"
                    android:textSize="20sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </RelativeLayout>

            <TextView
                android:id="@+id/desct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/descriptions"
                android:textColor="@color/main_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/feature_recyle_item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/lorem"
                android:textColor="@color/main_color" />

            <RelativeLayout
                android:id="@+id/spesifik_relat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/specification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:text="Specification"
                    android:textColor="@color/main_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/specification"
                    android:layout_marginTop="10dp">

                    <RelativeLayout
                        android:id="@+id/wifirelat"
                        android:layout_width="130dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true">

                        <ImageView
                            android:id="@+id/wifiImage"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:src="@drawable/wifi"
                            app:tint="@color/main_color" />

                        <TextView
                            android:id="@+id/wifi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="5dp"
                            android:layout_toEndOf="@id/wifiImage"
                            android:text="Ailem.net"
                            android:textColor="@color/main_color"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/bedrelat"
                        android:layout_width="130dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/wifirelat">

                        <ImageView
                            android:id="@+id/bed"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/bed"
                            app:tint="#1E6277" />

                        <TextView
                            android:id="@+id/otaq"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="5dp"
                            android:layout_toEndOf="@id/bed"
                            android:text="2 otaq"
                            android:textColor="@color/main_color"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="130dp"
                        android:layout_height="40dp"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/bedrelat">

                        <ImageView
                            android:id="@+id/washing"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/washing"
                            app:tint="@color/main_color" />

                        <TextView
                            android:id="@+id/mertebe"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="5dp"
                            android:layout_toEndOf="@id/washing"
                            android:text="Var"
                            android:textColor="@color/main_color"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </RelativeLayout>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/pecification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:text="Nese olsun"
                    android:textColor="@color/main_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sth"
                    android:layout_below="@id/pecification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/loremuzun"
                    android:textColor="@color/main_color" />


                <TextView
                    android:id="@+id/ddd"
                    android:layout_below="@id/sth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/lorem"
                    android:textColor="@color/main_color" />


                <TextView
                    android:id="@+id/sthe"
                    android:layout_below="@id/ddd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/loremuzun"
                    android:textColor="@color/main_color" />


            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>